# DataEngineering

./: README.md  practicaHadoop.ipynb
MongoDB/: MemoriaMod.docx  authors.json  authors_validator.json  comments.json  comments_validator.json  cursos2.json  cursos_validator.json  news.json  news_validator.json  usuarios_validator.json
Neo4j/: MemoriaMod.docx  Recetas_ingredientes.csv  codigo.txt  drinks_formatted.csv  grafo.txt  ingredients_formatted.csv  pairings_formatted.csv  recipes_formatted.csv
traffic_status_tracker/: README.md  docker-compose.yml  pyproject.toml
traffic_status_tracker/consumer1/: Dockerfile  consumer.py  requirements.txt  wait-for-it.sh
traffic_status_tracker/producer/: Dockerfile  event.py  requirements.txt  traffic_producer.py  wait-for-it.sh
